Added final ipynb

--- a/08-Alignment_and_variant_calling/practicals/alignment_and_variant_calling-Copy1.ipynb
+++ b/08-Alignment_and_variant_calling/practicals/alignment_and_variant_calling-Copy1.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wget https://github.com/cb2edu/CB2-101-BioComp/raw/master/08-Alignment_and_variant_calling/data/cb2-101-variant_detection_sample_data.tar.xz\n",
-    "tar -xvJf cb2-101-variant_detection_sample_data.tar.xz"
+    "wget https://github.com/cb2edu/CB2-101-BioComp/raw/2020/08-Alignment_and_variant_calling/data/sample_data.tar.gz\n",
+    "tar -xvzf sample_data.tar.gz"
    ]
   },
   {
@@ -120,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "samtools mpileup -f sample_data/chr20.fa SRR765989.sorted.bam | head -n 20"
+    "samtools mpileup -f sample_data/chr20.fa SRR765989.sorted.bam | head -n 50"
    ]
   },
   {
@@ -141,9 +141,9 @@
     "### Exercises\n",
     "Modify the `mpileup` command above and answer the following questions.\n",
     "\n",
-    "**Q1:** What is the read depth at position 45130772? (Rather than scrolling to the position, use grep to find the position. Before doing this, check if the above command has finished running, if not, you may need to interrupt it)\n",
+    "**Q1:** What is the read depth at position 60158? (Rather than scrolling to the position, use grep to find the position. Before doing this, check if the above command has finished running, if not, you may need to interrupt it)\n",
     "\n",
-    "**Q2:** What is the reference base and the alternate base at the 45130772? \n",
+    "**Q2:** What is the reference base and the alternate base at the 60158? \n",
     "\n",
     "**Q3:** How many reference and how many non-reference bases are there?"
    ]
@@ -300,6 +300,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Download dbSNP\n",
+    "This is prepackaged for this class for easy access. The original data can be accessed from GATK resource bundle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wget http://cmb.path.uab.edu/training/2020/files/Homo_sapiens_assembly38.dbsnp138.vcf.tar.xz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "tar -xvJf Homo_sapiens_assembly38.dbsnp138.vcf.tar.xz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Recalibrate the bases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gatk-4.1.9.0/gatk BaseRecalibrator  -R sample_data/chr20.fa  -I SRR765989.dup.rg.bam --known-sites Homo_sapiens_assembly38.dbsnp138.vcf -O SRR765989.recal_data.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gatk-4.1.9.0/gatk ApplyBQSR -R sample_data/chr20.fa  -I SRR765989.dup.rg.bam --bqsr-recal-file SRR765989.recal_data.csv -O SRR765989.recal.bam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now we can call SNPs."
    ]
   },
@@ -309,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gatk-4.1.9.0/gatk HaplotypeCaller -R sample_data/chr20.fa  -I SRR765989.dup.rg.bam -O raw_variants.vcf"
+    "gatk-4.1.9.0/gatk HaplotypeCaller -R sample_data/chr20.fa  -I SRR765989.recal.bam -O raw_variants.vcf --dbsnp Homo_sapiens_assembly38.dbsnp138.vcf"
    ]
   },
   {
@@ -317,6 +370,39 @@
    "metadata": {},
    "source": [
     "For full happlotype caller check the `run.sh` file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### VQSR\n",
+    "\n",
+    "We cannot run VQSR is our dataset. The coverage is too low. The command is for demonstration only. For details see: https://gatk.broadinstitute.org/hc/en-us/articles/360035531612-Variant-Quality-Score-Recalibration-VQSR-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "gatk-4.1.9.0/gatk VariantRecalibrator -R sample_data/chr20.fa -V raw_variants.vcf \\\n",
+    "--resource:hapmap,known=false,training=true,truth=true,prior=15.0 hapmap_3.3.hg38.vcf.gz \\\n",
+    "--resource:dbsnp,known=true,training=false,truth=false,prior=2.0 Homo_sapiens_assembly38.dbsnp138.vcf \\\n",
+    "-mode SNP \\\n",
+    "--tranches-file output.tranches \\\n",
+    "-O output.vqsr \\\n",
+    "-an AF\n",
+    "\n",
+    "gatk ApplyVQSR \\\n",
+    "   -R Homo_sapiens_assembly38.fasta \\\n",
+    "   -V input.vcf.gz \\\n",
+    "   -O output.vcf.gz \\\n",
+    "   --truth-sensitivity-filter-level 99.0 \\\n",
+    "   --tranches-file output.tranches \\\n",
+    "   --recal-file output.recal \\\n",
+    "   -mode SNP\n",
+    "```"
    ]
   },
   {
@@ -350,22 +436,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat raw_variants.vcf | grep 42415383"
+    "cat raw_variants.vcf | grep 64048910"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q1:** What is the reference base and the alternate base at position 42415383?\n",
+    "**Q1:** What is the reference base and the alternate base at position 64048910?\n",
     "\n",
-    "**Q2:** What is the total raw read depth at position 42415383? \n",
+    "**Q2:** What is the total raw read depth at position 64048910? \n",
     "\n",
-    "**Q3:** What is the number of high-quality reads supporting the SNP call at position 42415383? How many reads support the reference allele and how many support the alternate allele? \n",
+    "**Q3:** What is the number of high-quality reads supporting the SNP call at position 64048910? How many reads support the reference allele and how many support the alternate allele? \n",
     "\n",
     "**Hint:** Look up the AD tag in the FORMAT column: the first value gives the number of reference reads and the second gives the number of non-reference reads.\n",
     "\n",
-    "**Q4:** What sort of event is happening at position 42415383? "
+    "**Q4:** What sort of event is happening at position 64048910? "
    ]
   },
   {
