--- a/07-NGS_Intro_QC/practicals/data_formats_and_qc.ipynb
+++ b/07-NGS_Intro_QC/practicals/data_formats_and_qc.ipynb
@@ -956,7 +956,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wget https://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc_v0.11.9.zip\n",
+    "wget --no-check-certificate https://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc_v0.11.9.zip\n",
     "unzip fastqc_v0.11.9.zip"
    ]
   },
