--- a/03-Reproducible_research/Reproducible_research.Rmd
+++ b/03-Reproducible_research/Reproducible_research.Rmd
@@ -1,18 +1,21 @@
 ---
 title: "Reproducilble Research"
-author: "Malay (malay@uab.edu)"
-date: "November 6, 2018"
+author: "Malay (mbasu@kumc.edu)"
+date: "November 9, 2023"
 output:
   pdf_document:
     number_sections: yes
     toc: yes
   html_document:
     toc: yes
+tables: yes
 ---
 
 # What is reproducible research
 
-In science replicability is of prime importance. Reproducible research is a concept where data and code are packaged together into one live document. It provides the facility to reproduce the data analysis step exactly on another computer.
+In science replicability is of prime importance. There is a difference between "replication" and "reproduction". Replication of an experiments is to repeat the same experiment to see whether the result holds up. There is a assumption that the results will differ next time. The results of experimental replication are of two types: biological and technical replicates. Unlike replication, reproduction of and experment is to repeat is exactly to check whether another groups' results holds up under scrutiny. This is of vital importance.
+
+In bioinformatics, reproducible research is a concept where data and code are packaged together into one live document. It provides the facility to reproduce the data analysis step exactly on another computer.
 
 # Text processing vs word processing
 
@@ -40,20 +43,24 @@ Type the above code block in a text file. Name the file as `hello.tex`. You can 
 ```bash
 xelatex hello.tex
 ```
+Note: You might have to install xelatex and the assoicated packages.
+
 
 # `Pandoc`
 \LaTeX\ is a type-setting software and no one should use it directly. `Pandoc` (<http://johnmacfarlane.net/pandoc/>) is a highly useful text conversion software that can convert any form of text to another. Additionally, it supports a variant of a very popular and simple text markup language called `markdown`. When you convert a `markdown` formatted file to PDF using `pandoc`, it uses \LaTeX\ behind the scene. This makes our job is crating \LaTeX\ a lot easier.
 
 Let's create our first `pandoc` file.
 
-```{.markdown}
+````{verbatim}
 ---
 title: My first document
 author: Malay
 ---
 # This is the first section
 Hello World!
-```
+
+````
+
 Type the above code in a file called `hello1.md`. Then type the following:
 
 
@@ -92,7 +99,7 @@ Within `RStudio` all these steps are put together under one button click.
 
 Type the following code into `RStudio`:
 
-
+````{verbatim}
     ---
     title: My first knitr document
     author: Me
@@ -107,38 +114,50 @@ Type the following code into `RStudio`:
     x<-rnorm(100)
     mean(x)
     ```
-
+````
 ## Chunk options
 
-For a list of chunk options see <http://yihui.name/knitr/options#chunk_options>. There are several options you can use to control what should be included in the final document. For example, `echo=FALSE` with not include the code int he final document.
+For a list of chunk options see <http://yihui.name/knitr/options#chunk_options>. There are several options you can use to control what should be included in the final document. For example, `echo=FALSE` with not include the code in the final document.
 
+````{verbatim}
     ```{r echo=FALSE}
     set.seed(1)
     x<-rnorm(100)
     mean(x)
     ```
+````
 
 `results="hide"` will hide the output but the code will still be shown.
 
+````{verbatim}
     ```{r results="hide"}
     set.seed(1)
     x<-rnorm(100)
     mean(x)
     ```
+````
 
 `include=FALSE` will suppress both the output and the code, but the code will will be executed.
 
+````{verbatim}
     ```{r include=FALSE}
     set.seed(1)
     x<-rnorm(100)
     mean(x)
     ```
+````
+```{r include=FALSE}
+    set.seed(1)
+    x<-rnorm(100)
+    mean(x)
+```
 
-    ```{r}
+```{r}
     head(x)
-    ```
+```
 
 To prevent the execution of the code, use `eval=FALSE`.
+
 
 ## Global chunk option
 
@@ -151,6 +170,7 @@ knitr::opts_chunk$set(message=FALSE)
 ````
 
 One important option for chunk is caching R calculations.
+
 ````markdown
 `r ''````{r include=FALSE}
 knitr::opts_chunk$set(cache=TRUE)
@@ -168,26 +188,34 @@ You can include a piece of data from the calculation inside a text chunk.
 
 You can use R package `xtable` for creating nice looking table.
 
-    ```{r fitmodel}
+````{verbatim}
+```{r fitmodel}
     library(datasets)
     data(airquality)
     fit <- lm(Ozone ~ Wind, data=airquality)
-    ```
+```
+````
+
+```{r, include=FALSE}
+    library(datasets)
+    data(airquality)
+    fit <- lm(Ozone ~ Wind, data=airquality)
+```
 We can now print a nice looking table of regression coefficients.
 
 
-    ```{r results="asis"}
-    library(xtable)
-    options(xtable.comment=FALSE)
-    xt <- xtable( summary(fit) )
-    print (xt, type="pandoc")
-    ```
+```{r, results='asis'}
+library(xtable)
+options(xtable.comment=FALSE)
+xt <- xtable( summary(fit) )
+print.xtable(xt, type="latex")
+```
 
 You can also use the `knitr` function `kable` to create a table.
 
-    ```{r}
-    knitr::kable(summary(airquality))
-    ```
+```{r}
+knitr::kable(summary(airquality))
+```
 
 # Git and github
 
@@ -195,17 +223,6 @@ You can also use the `knitr` function `kable` to create a table.
 
 ## Demo how to create github account and create a repository
 
-## Introdcution to git
-
-Cloning a repository.
-
-```{r engine='bash'}
-git clone https://github.com/cb2edu/testgit.git
-cd testgit
-ls
-```
-
-
-
+Check the Jupyter notebook.
 
 * * * *
