Correcting typo in git practicals

--- a/03-Reproducible_research/git_practicals.ipynb
+++ b/03-Reproducible_research/git_practicals.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create the assingment repository\n",
+    "# Create the assignment repository\n",
     "\n",
-    "Create the class assingment repository on GitHub. Depending on the course, you might have to use either a repository already provided to you or one that you create. In this hands-on excersize I will use a repository that I have already created for me. I will assign this to a variable that I will use for the rest of this excersize. You should assign the variable to your own repository."
+    "Create the class assignment repository on GitHub. Depending on the course, you might have to use either a repository already provided or one you created. In this hands-on exercise, I will use a repository that I have already created for me. I will assign this to a variable I will use for the rest of this exercise. You should assign the variable to your own repository."
    ]
   },
   {
