--- a/05-MolEvol/phylogeny.ipynb
+++ b/05-MolEvol/phylogeny.ipynb
@@ -49,6 +49,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download phylip. Note that compilation of the unix source code has a known bug with the current gcc compiler. See how to fix this here: https://phylipweb.github.io/phylip/bugs.html."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -57,16 +64,39 @@
    },
    "outputs": [],
    "source": [
-    "wget http://evolution.gs.washington.edu/phylip/download/phylip-3.697.tar.gz\n",
-    "tar -xvzf phylip-3.697.tar.gz\n",
-    "cd phylip-3.697/src\n",
+    "# wget https://phylipweb.github.io/phylip/download/phylip-3.697.tar.gz\n",
+    "# tar -xvzf phylip-3.697.tar.gz\n",
+    "#cd phylip-3.697/src\n",
     "#pwd\n",
-    "make -f Makefile.unx install\n",
-    "cd ../exe\n",
-    "export PATH=$PATH:`pwd`\n",
-    "cd ../..\n",
-    "pwd\n",
-    "which protdist"
+    "#make -f Makefile.unx install\n",
+    "#cd ../exe\n",
+    "#export PATH=$PATH:`pwd`\n",
+    "#cd ../..\n",
+    "#pwd\n",
+    "#which protdist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this course we will install phylip from ubuntu repository. Run the following in the terminal. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo apt install phylip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Ubuntu installation each command of phylip should be prepended with `phylip` itself. For example if you have installed `phylip` using direct compilation, you should use `prodist`. But for installation using `apt` you will use `phylip protdist`."
    ]
   },
   {
@@ -87,7 +117,7 @@
    "outputs": [],
    "source": [
     "#cp p53.phy infile\n",
-    "protdist <<EOF\n",
+    "phylip protdist <<EOF\n",
     "p53.phy\n",
     "y\n",
     "EOF\n"
@@ -129,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "neighbor <<EOF\n",
+    "phylip neighbor <<EOF\n",
     "y\n",
     "EOF"
    ]
@@ -192,14 +222,15 @@
    },
    "outputs": [],
    "source": [
-    "cd phylip-3.697/exe\n",
-    "export PATH=$PATH:`pwd`\n",
-    "cd ../..\n",
+    "#cd phylip-3.697/exe\n",
+    "#export PATH=$PATH:`pwd`\n",
+    "#cd ../..\n",
     "#cp p53.phy infile\n",
     "rm infile\n",
+    "rm outfile\n",
     "cp outtree njtree.tre\n",
     "cp p53.phy infile\n",
-    "seqboot<<EOF\n",
+    "phylip seqboot<<EOF\n",
     "y\n",
     "3\n",
     "EOF\n",
@@ -220,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protdist <<EOF\n",
+    "phylip protdist <<EOF\n",
     "M\n",
     "D\n",
     "100\n",
@@ -244,7 +275,7 @@
    "outputs": [],
    "source": [
     "rm outtree\n",
-    "neighbor <<EOF\n",
+    "phylip neighbor <<EOF\n",
     "M\n",
     "100\n",
     "3\n",
@@ -270,10 +301,19 @@
    "source": [
     "rm outfile\n",
     "mv outtree intree\n",
-    "consense <<EOF\n",
+    "phylip consense <<EOF\n",
     "y\n",
     "EOF\n",
     "mv outtree neighbor_bootstrap.tre\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat neighbor_bootstrap.tre"
    ]
   },
   {
