--- a/07-NGS_Intro_QC/practicals/data_formats_and_qc.ipynb
+++ b/07-NGS_Intro_QC/practicals/data_formats_and_qc.ipynb
@@ -44,7 +44,10 @@
     "Do this from commandline.\n",
     "\n",
     "```\n",
+    "# for RedHat\n",
     "sudo yum install samtools bcftools htslib gnuplot\n",
+    "# for ubuntu\n",
+    "sudo apt install samtools bcftools gnuplot\n",
     "```"
    ]
   },
@@ -761,7 +764,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "The format option, __`-f`__ can be used to select what gets printed from your query command. For example, the following will print the position, reference base and alternate base for sample HG00131, separated by tabs:"
@@ -1097,9 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "grep ^'#' NA20538.sorted.bam.bchk | grep 'Use'"
@@ -1261,5 +1265,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
