Update variant calling

--- a/08-Alignment_and_variant_calling/practicals/attic/alignment_and_variant_calling-Copy1.ipynb
+++ b/08-Alignment_and_variant_calling/practicals/attic/alignment_and_variant_calling-Copy1.ipynb
@@ -34,13 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#wget -O bwa.tar.bz2 \"https://downloads.sourceforge.net/project/bio-bwa/bwa-0.7.17.tar.bz2?r=https%3A%2F%2Fsourceforge.net%2Fprojects%2Fbio-bwa%2Ffiles%2Flatest%2Fdownload&ts=1605561416\"\n",
-    "#tar -xvjf bwa.tar.bz2\n",
-    "\n",
-    "# Here is a trick for installation of the software. But be careful I am typing the password here.\n",
-    "# It will expose the password for everyone to see.\n",
-    "\n",
-    "echo \"cb2user\" | sudo -S apt install bwa "
+    "wget -O bwa.tar.bz2 \"https://downloads.sourceforge.net/project/bio-bwa/bwa-0.7.17.tar.bz2?r=https%3A%2F%2Fsourceforge.net%2Fprojects%2Fbio-bwa%2Ffiles%2Flatest%2Fdownload&ts=1605561416\"\n",
+    "tar -xvjf bwa.tar.bz2"
    ]
   },
   {
@@ -56,10 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Not need we have already installed it\n",
-    "#cd bwa-0.7.17\n",
-    "#make\n",
-    "#cd .."
+    "cd bwa-0.7.17\n",
+    "make\n",
+    "cd .."
    ]
   },
   {
@@ -75,8 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bwa\n",
-    "bwa index sample_data/chr20.fa -p chr20"
+    "./bwa-0.7.17/bwa\n",
+    "./bwa-0.7.17/bwa index sample_data/chr20.fa -p chr20"
    ]
   },
   {
@@ -92,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bwa mem chr20 sample_data/SRR765989_F1.fastq sample_data/SRR765989_F2.fastq | samtools view -bS >SRR765989.bam"
+    "./bwa-0.7.17/bwa mem chr20 sample_data/SRR765989_F1.fastq sample_data/SRR765989_F2.fastq | samtools view -bS >SRR765989.bam"
    ]
   },
   {
@@ -126,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "samtools mpileup -f sample_data/chr20.fa SRR765989.sorted.bam"
+    "samtools mpileup -f sample_data/chr20.fa SRR765989.sorted.bam | head -n 50"
    ]
   },
   {
@@ -316,8 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This takes hours to download so we will skip this step\n",
-    "#wget https://filedn.com/lw6UhhIBFEBza4CcKJHjOA8/cb2edu/bigfiles/2020/files/Homo_sapiens_assembly38.dbsnp138.vcf.tar.xz"
+    "wget http://cmb.path.uab.edu/training/2020/files/Homo_sapiens_assembly38.dbsnp138.vcf.tar.xz"
    ]
   },
   {
@@ -328,7 +321,6 @@
    },
    "outputs": [],
    "source": [
-    "pwd\n",
     "tar -xvJf Homo_sapiens_assembly38.dbsnp138.vcf.tar.xz"
    ]
   },
@@ -345,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gatk-4.1.9.0/gatk BaseRecalibrator  -R sample_data/chr20.fa  -I SRR765989.dup.rg.bam --known-sites Homo_sapiens_assembly38.dbsnp138.vcf -O SRR765989.recal_data.csv\n"
+    "gatk-4.1.9.0/gatk BaseRecalibrator  -R sample_data/chr20.fa  -I SRR765989.dup.rg.bam --known-sites Homo_sapiens_assembly38.dbsnp138.vcf -O SRR765989.recal_data.csv"
    ]
   },
   {
@@ -534,5 +526,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
